<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="playbackSpeedValueLabel" type="id" />
    <item name="playbackSpeedSlider" type="id" />
</resources>
